--- a/src/components/AboutMe/style.css
+++ b/src/components/AboutMe/style.css
@@ -7,13 +7,16 @@
     min-height: fit-content;
 }
 .profile-parent{
+
     display:flex ;
     align-items: center;
     color:aliceblue ;
 }
 .profile-details-name{
+    align-items:center;
     font-size:24px;
     font-family:"Poppins semiBold";
+    text-align: left;
 }
 .profile-details-role{
     display: flex;
@@ -25,38 +28,36 @@
     font-family: cursive;
 }
 .primary-text{
-    color:(--white);
+    color:white;
+    text-align: left;
+}
+.styles_typicalWrapper__1_Uvh{
+    font-size: 24px;
+    margin: 0;
 }
 .highligted-text{
-    color: var( --dark-orange)
+    font-family: cursive;
+    color: darkorange
 }
 .profile-role-tagline{
     font-size: 19px;
     margin: 5px 0 0 0;
     font-family:"Poopins Light"
 }
-.profile-options .highlighted-btn {
-    margin: 0 0 0 28px;
-}
-.profile-options .highlighted-btn:hover {
-    margin: 0 0 0 28px;
-    background-color: rgb(239, 172, 28);
-    color: black;
-}
 .profile-picture{
     display: flex;
     align-items:center;
     justify-content: center;
     box-shadow: 0 1px 0 0 var(--white);
-    border-radius: 50%;
+    border-radius: 60%;
     height:380px;
-    width:380px;
+    width:480px;
     margin: 0px 20px 0 100px;
 }
 .profile-picture-background{
     height:92%;
     width:92%;
-    background-image: url("../../assets/image/profile-pic.png");
+    background-image: url("../../assets/Screen\ Shot\ 2022-04-03\ at\ 4.37.30\ PM.png");
     background-size: cover;
     border-radius: 50%;
     background-repeat: no-repeat;
@@ -68,35 +69,34 @@
     transition: 1s ease-out ;
 
 }
-.colz .colz-icon i {
-    color:white;
-    padding: 8px;
-    padding-left:0px;
-}
-.colz .colz-icon i :hover{
-    transform: scale(1.9);
-}
+@media screen and (max-width:1100px){
+    .profile-details-name{
+        font-size:16px;
+        text-align: center;
 
-@media screen and (max-width:1200px){
- .profile-picture{
-     margin: 0 0 0 90px;
- }
- .profile-details-name{
-     font-size:20px;
- }
- .profile-options .btn{
-     width:120px;
-     padding:11px 0;
-     z-index:700;
- }
-    
-}
-@media screen and (max-width:910px){
+    }
+    .primary-text{
+     
+        text-align: center;
+    }
+
+    .profile-role-tagline{
+        font-size: 16px;
+        margin: 0 0 0 0px;
+    }
+ 
+       
+   }
+   @media screen and (max-width:910px){
     .profile-picture{
         height: 320px;
         width: 320px;
         margin: 0 0 0 4px;
     }
+    .profile-details-name{
+        margin: 10px 20px 0 0;
+    }
+
 
 }
 @media screen and (max-width:810px){
@@ -131,8 +131,3 @@
         width: 90%;
     }
 }
-
-
-
-
-
